--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,28 +1,47 @@
 #Binds
 
+unbind r
+bind r source-file ~/.tmux.conf
+
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key k select-pane -U
+bind-key j select-pane -D
+
 setw -g mode-keys vi
 
-#Terminal
+set-option -g status-position top
+
 set -g default-terminal "screen-256color"
 set -sa terminal-features ',xterm-256color:RGB'
-set -sg escape-time 10
-set -g focus-events on
-set -g status
-
-#statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-left ''
-set -g status-style 'fg=colour7'
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-
-
-setw -g window-status-current-style 'fg=colour0 bg=colour7 bold'
-setw -g window-status-current-format ' #I #W #F '
-
-setw -g window-status-style 'fg=colour7' 
-setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour7]#F '
+set -g base-index 1
 
 #messages
 set -g message-style 'fg=colour2 bg=colour0 bold'
+
+
+set -g @plugin 'tmux-plugins/tmp'
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.tmux/plugins/tpm/tpm'
