--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,3 +1,6 @@
+[env]
+TERM = "xterm-256color"
+
 [general]
 
 working_directory = "C:/Users/daohr"
@@ -13,14 +16,17 @@ normal = {family = "FiraCode Nerd Font Mono", style = "Regular"}
 [colors]
 
 [colors.primary]
-foreground = "#FFFFFF"
-background = "#152030"
+foreground = "#F1F1F1"
+background = "#141C25"
 
 [colors.normal]
-green = "#20a929"
-blue = "#0004AF"
+green = "#13FF0E"
+blue = "#207ff0"
+magenta = "#881798"
+cyan = "#3A96DD"
 
 [colors.bright]
-green = "#aaFA14"
-blue = "#82b8c8"
+green = "#8ae234"
+blue = "#3B78FF"
+cyan = "#61D6D6"
 
